Keep reconnect coordinator API 23 compatible