@@ -8,15 +8,9 @@ import java.util.Objects;
 /**
  * Provider-neutral Android reconnect orchestration over durable local sync state.
  *
- * <p>The coordinator never talks to Google, Cloud Run, or any other provider directly. A concrete
- * {@link Transport} owns provider/managed authentication and remote I/O. This class only enforces
- * replay, verified-readback, and cursor ordering between that transport and
- * {@link OfflineSyncStateStore}.</p>
- *
- * <p>Submission is not acknowledgement. A local queued command is acknowledged only after the
- * transport reports terminal success for the exact command/idempotency identity with canonical
- * readback explicitly verified. Likewise, a synchronization cursor advances only after every
- * verified snapshot in the corresponding remote page has been durably persisted locally.</p>
+ * <p>The coordinator owns no provider authorization, URL, resource identifier, or canonical
+ * mutation implementation. Concrete transports preserve the selected MIRA execution boundary;
+ * this class enforces local replay, verified-readback, and cursor ordering.</p>
  */
 public final class ReconnectCoordinator {
     private static final int DEFAULT_COMMAND_LIMIT = 128;
@@ -28,12 +22,10 @@ public final class ReconnectCoordinator {
     private final Transport transport;
     private final FaultInjector faultInjector;
 
-    /** Creates the production coordinator with no fault injection. */
     public ReconnectCoordinator(OfflineSyncStateStore stateStore, Transport transport) {
         this(stateStore, transport, FaultInjector.NONE);
     }
 
-    /** Package-private deterministic failure seam for JVM crash/retry tests. */
     ReconnectCoordinator(
             OfflineSyncStateStore stateStore,
             Transport transport,
@@ -44,7 +36,6 @@ public final class ReconnectCoordinator {
         this.faultInjector = Objects.requireNonNull(faultInjector, "faultInjector");
     }
 
-    /** Performs one bounded reconnect pass using the full local queue/change-page limits. */
     public synchronized ReconnectResult reconnect() {
         return reconnect(DEFAULT_COMMAND_LIMIT, DEFAULT_CHANGE_LIMIT);
     }
@@ -52,12 +43,9 @@ public final class ReconnectCoordinator {
     /**
      * Performs one bounded reconnect pass.
      *
-     * <p>Commands are reconciled in stable local FIFO order. The pass stops at the first remote
-     * pending command, terminal remote command failure, protocol failure, transport failure, or
-     * local persistence failure. Remote changes are requested only after every command returned in
-     * this pass has reached verified terminal success. If more local commands remain because the
-     * caller supplied a smaller command limit, the pass returns {@link Status#MORE_PENDING} without
-     * advancing synchronization state.</p>
+     * <p>Commands are reconciled in stable local FIFO order. Submission alone never acknowledges
+     * local state. Only exact terminal remote success with verified canonical readback may do so.
+     * Remote change snapshots are durably stored before the corresponding opaque cursor advances.</p>
      */
     public synchronized ReconnectResult reconnect(int commandLimit, int changeLimit) {
         validateLimit(commandLimit, MAX_COMMAND_LIMIT, "commandLimit");
@@ -72,7 +60,6 @@ public final class ReconnectCoordinator {
 
         int acknowledged = 0;
         int snapshotsStored = 0;
-
         for (OfflineSyncStateStore.QueuedCommand queued : pending) {
             OfflineSyncStateStore.CommandIntent command = queued.command();
             final RemoteCommandState remote;
@@ -80,39 +67,26 @@ public final class ReconnectCoordinator {
                 remote = transport.reconcileCommand(command);
             } catch (TransportException exc) {
                 return ReconnectResult.transportFailure(
-                        command.commandId(),
-                        acknowledged,
-                        snapshotsStored,
-                        exc.code(),
-                        exc.getMessage()
+                        command.commandId(), acknowledged, snapshotsStored,
+                        exc.code(), exc.getMessage()
                 );
             }
 
             String protocolError = validateRemoteCommand(command, remote);
             if (protocolError != null) {
                 return ReconnectResult.protocolFailure(
-                        command.commandId(),
-                        acknowledged,
-                        snapshotsStored,
-                        protocolError
+                        command.commandId(), acknowledged, snapshotsStored, protocolError
                 );
             }
-
             if (remote.status() == RemoteCommandStatus.PENDING) {
                 return ReconnectResult.waitingRemote(
-                        command.commandId(),
-                        acknowledged,
-                        snapshotsStored
+                        command.commandId(), acknowledged, snapshotsStored
                 );
             }
-
             if (remote.status() == RemoteCommandStatus.FAILED) {
                 return ReconnectResult.remoteFailure(
-                        command.commandId(),
-                        acknowledged,
-                        snapshotsStored,
-                        remote.errorCode(),
-                        remote.errorMessage()
+                        command.commandId(), acknowledged, snapshotsStored,
+                        remote.errorCode(), remote.errorMessage()
                 );
             }
 
@@ -126,10 +100,7 @@ public final class ReconnectCoordinator {
                 acknowledged += 1;
             } catch (OfflineSyncStateStore.OfflineStateException exc) {
                 return ReconnectResult.localFailure(
-                        command.commandId(),
-                        acknowledged,
-                        snapshotsStored,
-                        exc.getMessage()
+                        command.commandId(), acknowledged, snapshotsStored, exc.getMessage()
                 );
             }
         }
@@ -156,22 +127,13 @@ public final class ReconnectCoordinator {
             page = transport.readChanges(currentCursor, changeLimit);
         } catch (TransportException exc) {
             return ReconnectResult.transportFailure(
-                    null,
-                    acknowledged,
-                    snapshotsStored,
-                    exc.code(),
-                    exc.getMessage()
+                    null, acknowledged, snapshotsStored, exc.code(), exc.getMessage()
             );
         }
 
         String pageError = validateChangePage(currentCursor, changeLimit, page);
         if (pageError != null) {
-            return ReconnectResult.protocolFailure(
-                    null,
-                    acknowledged,
-                    snapshotsStored,
-                    pageError
-            );
+            return ReconnectResult.protocolFailure(null, acknowledged, snapshotsStored, pageError);
         }
 
         try {
@@ -185,11 +147,7 @@ public final class ReconnectCoordinator {
             return ReconnectResult.localFailure(null, acknowledged, snapshotsStored, exc.getMessage());
         }
 
-        return ReconnectResult.complete(
-                acknowledged,
-                snapshotsStored,
-                page.nextCursor()
-        );
+        return ReconnectResult.complete(acknowledged, snapshotsStored, page.nextCursor());
     }
 
     private static String validateRemoteCommand(
@@ -204,9 +162,6 @@ public final class ReconnectCoordinator {
         }
         if (!command.idempotencyKey().equals(remote.idempotencyKey())) {
             return "remote idempotency_key does not match local command";
-        }
-        if (remote.status() == null) {
-            return "remote command status is missing";
         }
         if (remote.status() == RemoteCommandStatus.SUCCEEDED) {
             if (!remote.readbackVerified()) {
@@ -253,16 +208,11 @@ public final class ReconnectCoordinator {
         if (!page.readbackVerified()) {
             return "remote change page is missing verified canonical readback";
         }
-        if (page.nextCursor() == null || page.nextCursor().isBlank()) {
-            return "remote change page next cursor is missing";
-        }
         if (page.verifiedSnapshots().size() > requestedLimit) {
             return "remote change page exceeds requested snapshot limit";
         }
-        if (
-                Objects.equals(currentCursor, page.nextCursor())
-                        && !page.verifiedSnapshots().isEmpty()
-        ) {
+        if (Objects.equals(currentCursor, page.nextCursor())
+                && !page.verifiedSnapshots().isEmpty()) {
             return "remote change page contains snapshots without cursor progress";
         }
         return null;
@@ -274,19 +224,11 @@ public final class ReconnectCoordinator {
         }
     }
 
-    /**
-     * Remote adapter contract used by the reconnect coordinator.
-     *
-     * <p>A concrete implementation is responsible for authenticating through its selected lane and
-     * for preserving the M2-M1 serialized command boundary. Personal Google implementations must
-     * submit/read the Workspace command inbox rather than perform direct canonical mutation.</p>
-     */
+    /** Provider/managed adapter seam. Personal Google adapters must preserve queued-writer mode. */
     public interface Transport {
-        /** Ensures the exact command exists remotely and returns its current durable remote state. */
         RemoteCommandState reconcileCommand(OfflineSyncStateStore.CommandIntent command)
                 throws TransportException;
 
-        /** Returns one verified canonical change page beginning at the supplied opaque cursor. */
         ChangePage readChanges(String cursor, int limit) throws TransportException;
     }
 
@@ -306,7 +248,7 @@ public final class ReconnectCoordinator {
         LOCAL_FAILURE
     }
 
-    /** Immutable remote command projection. */
+    /** Immutable durable remote projection of one exact command. */
     public static final class RemoteCommandState {
         private final String commandId;
         private final String idempotencyKey;
@@ -334,18 +276,10 @@ public final class ReconnectCoordinator {
             this.errorMessage = optionalText(errorMessage, "errorMessage");
         }
 
-        public static RemoteCommandState pending(
-                String commandId,
-                String idempotencyKey
-        ) {
+        public static RemoteCommandState pending(String commandId, String idempotencyKey) {
             return new RemoteCommandState(
-                    commandId,
-                    idempotencyKey,
-                    RemoteCommandStatus.PENDING,
-                    false,
-                    List.of(),
-                    null,
-                    null
+                    commandId, idempotencyKey, RemoteCommandStatus.PENDING, false,
+                    Collections.<OfflineSyncStateStore.ResourceSnapshot>emptyList(), null, null
             );
         }
 
@@ -355,13 +289,8 @@ public final class ReconnectCoordinator {
                 List<OfflineSyncStateStore.ResourceSnapshot> verifiedSnapshots
         ) {
             return new RemoteCommandState(
-                    commandId,
-                    idempotencyKey,
-                    RemoteCommandStatus.SUCCEEDED,
-                    true,
-                    verifiedSnapshots,
-                    null,
-                    null
+                    commandId, idempotencyKey, RemoteCommandStatus.SUCCEEDED, true,
+                    verifiedSnapshots, null, null
             );
         }
 
@@ -372,11 +301,8 @@ public final class ReconnectCoordinator {
                 String errorMessage
         ) {
             return new RemoteCommandState(
-                    commandId,
-                    idempotencyKey,
-                    RemoteCommandStatus.FAILED,
-                    false,
-                    List.of(),
+                    commandId, idempotencyKey, RemoteCommandStatus.FAILED, false,
+                    Collections.<OfflineSyncStateStore.ResourceSnapshot>emptyList(),
                     requireText(errorCode, "errorCode"),
                     requireText(errorMessage, "errorMessage")
             );
@@ -455,7 +381,7 @@ public final class ReconnectCoordinator {
         }
     }
 
-    /** Stable reconnect pass result suitable for later UI/state mapping. */
+    /** Stable reconnect result for later UI/state mapping. */
     public static final class ReconnectResult {
         private final Status status;
         private final String commandId;
@@ -488,40 +414,21 @@ public final class ReconnectCoordinator {
 
         static ReconnectResult complete(int acknowledged, int snapshots, String cursor) {
             return new ReconnectResult(
-                    Status.COMPLETE,
-                    null,
-                    acknowledged,
-                    snapshots,
-                    0,
-                    cursor,
-                    null,
-                    null
+                    Status.COMPLETE, null, acknowledged, snapshots, 0, cursor, null, null
             );
         }
 
         static ReconnectResult morePending(int acknowledged, int snapshots, int remaining) {
             return new ReconnectResult(
-                    Status.MORE_PENDING,
-                    null,
-                    acknowledged,
-                    snapshots,
-                    remaining,
-                    null,
-                    null,
-                    "more local commands remain for a later bounded reconnect pass"
+                    Status.MORE_PENDING, null, acknowledged, snapshots, remaining,
+                    null, null, "more local commands remain for a later bounded reconnect pass"
             );
         }
 
         static ReconnectResult waitingRemote(String commandId, int acknowledged, int snapshots) {
             return new ReconnectResult(
-                    Status.WAITING_REMOTE,
-                    commandId,
-                    acknowledged,
-                    snapshots,
-                    0,
-                    null,
-                    null,
-                    "remote command is not terminal yet"
+                    Status.WAITING_REMOTE, commandId, acknowledged, snapshots, 0,
+                    null, null, "remote command is not terminal yet"
             );
         }
 
@@ -533,14 +440,8 @@ public final class ReconnectCoordinator {
                 String message
         ) {
             return new ReconnectResult(
-                    Status.REMOTE_FAILURE,
-                    commandId,
-                    acknowledged,
-                    snapshots,
-                    0,
-                    null,
-                    code,
-                    message
+                    Status.REMOTE_FAILURE, commandId, acknowledged, snapshots, 0,
+                    null, code, message
             );
         }
 
@@ -552,14 +453,8 @@ public final class ReconnectCoordinator {
                 String message
         ) {
             return new ReconnectResult(
-                    Status.TRANSPORT_FAILURE,
-                    commandId,
-                    acknowledged,
-                    snapshots,
-                    0,
-                    null,
-                    code,
-                    message
+                    Status.TRANSPORT_FAILURE, commandId, acknowledged, snapshots, 0,
+                    null, code, message
             );
         }
 
@@ -570,14 +465,8 @@ public final class ReconnectCoordinator {
                 String message
         ) {
             return new ReconnectResult(
-                    Status.PROTOCOL_FAILURE,
-                    commandId,
-                    acknowledged,
-                    snapshots,
-                    0,
-                    null,
-                    "protocol_error",
-                    message
+                    Status.PROTOCOL_FAILURE, commandId, acknowledged, snapshots, 0,
+                    null, "protocol_error", message
             );
         }
 
@@ -588,14 +477,8 @@ public final class ReconnectCoordinator {
                 String message
         ) {
             return new ReconnectResult(
-                    Status.LOCAL_FAILURE,
-                    commandId,
-                    acknowledged,
-                    snapshots,
-                    0,
-                    null,
-                    "local_state_error",
-                    message
+                    Status.LOCAL_FAILURE, commandId, acknowledged, snapshots, 0,
+                    null, "local_state_error", message
             );
         }
 
@@ -632,7 +515,7 @@ public final class ReconnectCoordinator {
         }
     }
 
-    /** Transport/authentication/unavailability failure with stable adapter-owned category. */
+    /** Stable adapter-owned transport/authentication/unavailability error. */
     public static class TransportException extends Exception {
         private final String code;
 
@@ -672,29 +555,24 @@ public final class ReconnectCoordinator {
                 new ArrayList<>(snapshots.size());
         for (OfflineSyncStateStore.ResourceSnapshot snapshot : snapshots) {
             Objects.requireNonNull(snapshot, "snapshot");
-            result.add(
-                    new OfflineSyncStateStore.ResourceSnapshot(
-                            snapshot.dataClass(),
-                            snapshot.resourceId(),
-                            snapshot.revision(),
-                            snapshot.payload()
-                    )
-            );
+            result.add(new OfflineSyncStateStore.ResourceSnapshot(
+                    snapshot.dataClass(),
+                    snapshot.resourceId(),
+                    snapshot.revision(),
+                    snapshot.payload()
+            ));
         }
         return Collections.unmodifiableList(result);
     }
 
     private static String requireText(String value, String field) {
-        if (value == null || value.isBlank() || !value.equals(value.trim())) {
+        if (value == null || value.trim().isEmpty() || !value.equals(value.trim())) {
             throw new IllegalArgumentException(field + " must be non-empty trimmed text");
         }
         return value;
     }
 
     private static String optionalText(String value, String field) {
-        if (value == null) {
-            return null;
-        }
-        return requireText(value, field);
+        return value == null ? null : requireText(value, field);
     }
 }
